[gd_scene load_steps=2 format=3 uid="uid://cqjktgya8j3wr"]

[ext_resource type="Script" uid="uid://cbp4kg3blanr5" path="res://src/main/UI/ui.gd" id="1_731sn"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
script = ExtResource("1_731sn")

[node name="TopLeft" type="VBoxContainer" parent="." groups=["pauseable"]]
layout_mode = 1
offset_right = 95.0
offset_bottom = 50.0
alignment = 2

[node name="EatenLabel" type="Label" parent="TopLeft"]
layout_mode = 2
text = "Food Eaten: "
horizontal_alignment = 2

[node name="LeftLabel" type="Label" parent="TopLeft"]
layout_mode = 2
text = "Food Left: "
horizontal_alignment = 2

[node name="Middle" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -82.0
offset_right = 47.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2

[node name="VictoryLabel" type="Label" parent="Middle" groups=["pauseable"]]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)

[node name="PauseMenu" type="VBoxContainer" parent="Middle"]
process_mode = 2
visible = false
layout_mode = 2

[node name="PauseLabel" type="Label" parent="Middle/PauseMenu"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Middle/PauseMenu"]
layout_mode = 2
text = "Resume"

[node name="SettingsButton" type="Button" parent="Middle/PauseMenu"]
layout_mode = 2
text = "Settings"

[node name="LevelSelectButton" type="Button" parent="Middle/PauseMenu"]
layout_mode = 2
text = "Level Select"

[node name="MainMenuButton" type="Button" parent="Middle/PauseMenu"]
layout_mode = 2
text = "Exit to Main Menu"

[node name="ExitButton" type="Button" parent="Middle/PauseMenu"]
layout_mode = 2
text = "Exit to Desktop"

[connection signal="pressed" from="Middle/PauseMenu/ResumeButton" to="." method="_on_resume_button_pressed"]
